// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverrideSet tests renders overrideSets without crashing 1`] = `
<div
  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main dragging"
  data-testid="manor"
  draggable="true"
>
  <div
    class="overrideList"
  >
    <div
      class="artifactSelection"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main drag"
          icon="drag-handle-vertical"
        >
          <svg
            data-icon="drag-handle-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              drag-handle-vertical
            </desc>
            <path
              d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp3-form-group selectInput selectOverrideSets"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="selectedOverrideSets[0]"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value="manor"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="artifactsTabs"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <section>
              <section
                class="thead rowItem"
              >
                <span
                  class="type"
                >
                  Kubernetes Manifest
                </span>
                <span
                  class="server"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="color: black; font-weight: 900; display: inline-flex; align-items: center; width: 200px;"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 14 14"
                        width="18"
                      >
                        <path
                          d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                          fill="#f42534"
                        />
                      </svg>
                    </span>
                    Git
                  </span>
                </span>
                <span>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="display: inline-flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <span>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    br
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 280px;"
                  >
                    none
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 140px;"
                  >
                    man1
                  </p>
                </span>
              </section>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideSet tests renders overrideSets without crashing 2`] = `
<div
  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main dragging"
  data-testid="manor"
  draggable="true"
>
  <div
    class="overrideList"
  >
    <div
      class="artifactSelection"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main drag"
          icon="drag-handle-vertical"
        >
          <svg
            data-icon="drag-handle-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              drag-handle-vertical
            </desc>
            <path
              d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp3-form-group selectInput selectOverrideSets"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="selectedOverrideSets[0]"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value="manor"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="artifactsTabs"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <section>
              <section
                class="thead rowItem"
              >
                <span
                  class="type"
                >
                  Kubernetes Manifest
                </span>
                <span
                  class="server"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="color: black; font-weight: 900; display: inline-flex; align-items: center; width: 200px;"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 14 14"
                        width="18"
                      >
                        <path
                          d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                          fill="#f42534"
                        />
                      </svg>
                    </span>
                    Git
                  </span>
                </span>
                <span>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="display: inline-flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <span>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    br
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 280px;"
                  >
                    none
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 140px;"
                  >
                    man1
                  </p>
                </span>
              </section>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideSet tests renders overrideSets without crashing 3`] = `
<div
  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main dragging"
  data-testid="manor"
  draggable="true"
>
  <div
    class="overrideList"
  >
    <div
      class="artifactSelection"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main drag"
          icon="drag-handle-vertical"
        >
          <svg
            data-icon="drag-handle-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              drag-handle-vertical
            </desc>
            <path
              d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp3-form-group selectInput selectOverrideSets"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="selectedOverrideSets[0]"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value="manor"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="artifactsTabs"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <section>
              <section
                class="thead rowItem"
              >
                <span
                  class="type"
                >
                  Kubernetes Manifest
                </span>
                <span
                  class="server"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="color: black; font-weight: 900; display: inline-flex; align-items: center; width: 200px;"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 14 14"
                        width="18"
                      >
                        <path
                          d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                          fill="#f42534"
                        />
                      </svg>
                    </span>
                    Git
                  </span>
                </span>
                <span>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="display: inline-flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <span>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    br
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 280px;"
                  >
                    none
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 140px;"
                  >
                    man1
                  </p>
                </span>
              </section>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideSet tests renders overrideSets without crashing 4`] = `
<div
  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main dragOver"
  data-testid="manor1"
  draggable="true"
>
  <div
    class="overrideList"
  >
    <div
      class="artifactSelection"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main drag"
          icon="drag-handle-vertical"
        >
          <svg
            data-icon="drag-handle-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              drag-handle-vertical
            </desc>
            <path
              d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp3-form-group selectInput selectOverrideSets"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="selectedOverrideSets[1]"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value="manor1"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="artifactsTabs"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <section>
              <section
                class="thead rowItem"
              >
                <span
                  class="type"
                >
                  Kubernetes Manifest
                </span>
                <span
                  class="server"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="color: black; font-weight: 900; display: inline-flex; align-items: center; width: 200px;"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 14 14"
                        width="18"
                      >
                        <path
                          d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                          fill="#f42534"
                        />
                      </svg>
                    </span>
                    Git
                  </span>
                </span>
                <span>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="display: inline-flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <span>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    br
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 280px;"
                  >
                    none
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 140px;"
                  >
                    man2
                  </p>
                </span>
              </section>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideSet tests renders overrideSets without crashing 5`] = `
<div
  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
  data-testid="manor1"
  draggable="true"
>
  <div
    class="overrideList"
  >
    <div
      class="artifactSelection"
    >
      <div>
        <span
          class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main drag"
          icon="drag-handle-vertical"
        >
          <svg
            data-icon="drag-handle-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              drag-handle-vertical
            </desc>
            <path
              d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp3-form-group selectInput selectOverrideSets"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="selectedOverrideSets[1]"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value="manor1"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="artifactsTabs"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <section>
              <section
                class="thead rowItem"
              >
                <span
                  class="type"
                >
                  Kubernetes Manifest
                </span>
                <span
                  class="server"
                >
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="color: black; font-weight: 900; display: inline-flex; align-items: center; width: 200px;"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 14 14"
                        width="18"
                      >
                        <path
                          d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                          fill="#f42534"
                        />
                      </svg>
                    </span>
                    Git
                  </span>
                </span>
                <span>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="display: inline-flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <span>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    br
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 280px;"
                  >
                    none
                  </p>
                </span>
                <span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1; width: 140px;"
                  >
                    man2
                  </p>
                </span>
              </section>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideSet tests renders without crashing 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main serviceOverrides"
  />
</div>
`;
